fix scrollbar height

--- a/css/vimu.css
+++ b/css/vimu.css
@@ -303,16 +303,10 @@ p.soundname {
 
 .scrollbar {
     float: left;
-    height: auto;
+    height: 240px;
     width: inherit;
     overflow-y: auto;
-    margin-bottom: 25px;
-}
-
-/* TODO: Fix min height */
-.force-overflow {
-    min-height: 100px;
-    width: inherit;
+    /* margin-bottom: 25px; */
 }
 
 .scrollbar-primary::-webkit-scrollbar {
